refactor: convert ApplicationContext to singleton and decouple API clients from global context